# harbor-fetch

./: .gitignore  CLAUDE.md  LICENSE  PROMPT.md  README.md  example-tree.txt  languages.yaml  products.yaml  pyproject.toml  videos.yaml
.claude/: settings.local.json
.github/workflows/: release.yml  tests.yml
harbor_fetch/: __init__.py  __main__.py  api.py  config.py  downloader.py
harbor_fetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_api.py  test_cli_integration.py  test_naming.py
